--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/newtwo.JPG);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/newtwo.JPG); background-size: contain;" >
                 <!-- header background image -->
                 <img class="coda-background-img" align="top-left" src="img/newtwo.JPG" alt="header image">
                 <div class="coda-top-panel">
