Updating items for 2023 statuses

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <!-- Start Header -->
             <header id="coda-about" class="coda-header" style="background-image: url(img/newtwo.JPG); background-size: contain;" >
                 <!-- header background image -->
-                <img class="coda-background-img" align="top-left" src="img/newtwo.JPG" alt="header image">
+                <img class="coda-background-img" align="right" src="img/newtwo.JPG" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
@@ -270,20 +270,20 @@
                                 <div class="coda-timeline-label">timeline</div>
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2018 - present</p>
+                                    <p class="coda-time-interval">Jan 2022 - present</p>
+                                    <h4 class="coda-underscore">Director of Product Management</h4>
+                                </div>
+                                <!-- end experience timeline caption -->
+                                <!-- experience timeline caption -->
+                                <div class="coda-experience-timeline-caption">
+                                    <p class="coda-time-interval">2018 - 2021</p>
                                     <h4 class="coda-underscore">Senior Product Manager</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2017 -2018</p>
+                                    <p class="coda-time-interval">2016 -2018</p>
                                     <h4 class="coda-underscore">Product Manager</h4>
-                                </div>
-                                <!-- end experience timeline caption -->
-                                <!-- experience timeline caption -->
-                                <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2015 - 2017</p>
-                                    <h4 class="coda-underscore">Efficiency Analyst</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
                             </div>
@@ -317,39 +317,38 @@
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2018 - present</p>
-                                        <h3>Senior Product Manager</h3>
+                                        <p class="coda-time-interval">Jan 2022 - present</p>
+                                        <h3>Director of Product Management</h3>
                                     </header>
                                     <p>I'm currently working at a pretty darn cool digital product agency called Ventive. We build apps for clients in a variety of different industries and capacities.</p>
-                                    <p>In my role, I lead teams of UX/UI and visual designers, technical project managers, lead engineers, and BE/FE developers to take our client's vision from the back of the napkin to the real deal. I absolutely love getting to know the industry and people that my products apply to, and collaborating with everyone involved in building out the product.</p>
-                                    <p>Right now, I'm working on 4 different projects that apply to completely different industries: Eyecare, Trucking, Diamond Manufacturing, and Medical Supply Ordering.</p>
+                                    <p>In my role, I get to lead our Product Management depaartment which consists of our Lead and Junior Product Owners, UX Researchers, UX/UI and Visual Designers.</p>
 
                                 </article>
                                 <!-- end experience description article -->
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2017 - 2018</p>
+                                        <p class="coda-time-interval">2018 - 2021</p>
+                                        <h3>Senior Product Manager</h3>
+                                    </header>
+                                    <p>In this role, I led teams of UX/UI and visual designers, technical project managers, lead engineers, and BE/FE developers to take our client's vision from the back of the napkin to the real deal. I absolutely loved getting to know the industry and people that my products apply to, and collaborating with everyone involved in building out the product.</p>
+                                    <p>I would work on 3-5 different projects simultaneously that involved completely different industries, including: Eyecare, Trucking, Diamond Manufacturing, and Medical Supply Ordering.</p>
+
+                                </article>
+                                <!-- end experience description article -->
+
+                                <!-- experience description article -->
+                                <article class="coda-experience-description">
+                                    <header class="coda-experience-article-header">
+                                        <p class="coda-time-interval">2016 - 2018</p>
                                         <h3>Product Manager</h3>
                                     </header>
                                     <p>I used to be on the product team for a DSD / Warehouse Management Software company where I launched a Learning Management System/Training Center for new and current clients of their enterprise software 
                                         by developing a website that included software documentation, FAQs, a video library, and a 
                                         comprehensive implementation process involving over 20 training videos that I scripted and produced using 
                                         Premiere Pro.</p>
-                                    <p>I also worked with developers to take a half finishe d SaaS product to a new and improved version 2.0. To streamline the effort, I redesigned the look and feel of the app to reflect Material Design principles. We then launched the web app on the Intuit App Store.</p>
+                                    <p>I also worked with developers to take a half finished SaaS product to a new and improved version 2.0. To streamline the effort, I redesigned the look and feel of the app to reflect Material Design principles. We then launched the web app on the Intuit App Store.</p>
                                     <p> Around this time, I also worked with a business partner on an MVP version of a project management and time tracking web app. The goal was to test the market using lean startup principles and to learn if this product would be viable in the marketplace. We found that users were relatively comfortable with piece mealing various web apps together to fulfill their needs and that unless a new product could combine a CRM, Project/Task Management, Time Tracking, and Invoicing, all in one soltuion, they weren't willing to jump away from what was currently working for them. At that time, based on these findings, we decided to not pursue the effort further.</p>
-                                </article>
-                                <!-- end experience description article -->
-                                <!-- experience description article -->
-                                <article class="coda-experience-description">
-                                    <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2015 - 2017</p>
-                                        <h3>Efficiency Analyst</h3>
-                                    </header>
-                                    <p>My time working as an Efficiency Analyst (both as a consultant as well as part of my job for a school district) was SUPER interesting. My job for the school district involved finding ways to make the district more efficient on an overall organization level. The idea was to leverage technology to save money and time, especially on recurring processes (like state funds reporting, for example).</p>
-                                    <p>I leveraged Google App Script (a utility that sits a layer above the Google Suite and connects / enhances the functionality of apps like Google Sheets, Docs, and Gmail by using HTML and Javascript) to create complex systems that solved pain points throughout the district that resulted in successful 25% efficiency growth including hundreds of hours of work saved through automation.</p>
-                                    <p>Solutions included: an Administrative Leave Reporting Tool, a District Calendaring System for schools and HR, a district-wide State Reporting Time-Triggered Auto-Email Reminder System, a Student Safety Check In/Out System used throughout the district, a Project & Task Manager Tool, as well as Input Systems that gathered data district-wide for reporting and data mining purposes.</p>
-                                    <p>Obviously, a nerd's playground!</p>
                                 </article>
                                 <!-- end experience description article -->
                             </div>
