photo header changes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <!-- Start Header -->
             <header id="coda-about" class="coda-header" style="background-image: url(img/newtwo.JPG); background-size: contain;" >
                 <!-- header background image -->
-                <img class="coda-background-img" align="right" src="img/newtwo.JPG" alt="header image">
+                <img class="coda-background-img" src="img/newtwo.JPG" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
@@ -171,7 +171,7 @@
                 <div class="coda-header-text">
                     <div class="container">
                         <div class="row align-items-center vh100">
-                            <div class="col-md-6 col-10">
+                            <div style= "text-align:right "class="col-md-12 col-10">
                                 <!-- profession -->
                                 <p class="coda-profession" style="text-align: right;">Product Management</p>
                                 <!-- end profession -->
