Removed welcome and bolded learn more about me

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <!-- logotype -->
                             <div class="col-auto">
                                 <div class="coda-logo">
-                                    <p class="text-cursor">Welcome!</p>
+                                 <!--   <p class="text-cursor">Welcome!</p> -->
                                 </div>
                             </div>
                             <!-- end logotype -->
@@ -179,7 +179,8 @@
                                 <h1 class="coda-name" style="text-align: right;">Roman Kolyvanov</h1>
                                 <!-- end first name, last Name -->
                                 <!-- "About me" button -->
-                                <a href="#about" class="coda-underscore coda-pop-up-btn" style="text-align: right;">learn more about me<i class="coda-left-arrow-ico"></i></a>
+                                <a href="#about" class="coda-underscore coda-pop-up-btn" style="text-align: right;"><b>learn more about me</b><i class="coda-left-arrow-ico"></i></a>
+                                
                                 <!-- end "About me" button -->
                             </div>
                         </div>
